--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title>Test</title>
 </head>
     <body>
-        <h1>Hello World 2 Guys!</h1>
+        <h1 style="color: blue;">Halo Guys</h1>
+            Ini baris satu 
+            <br>
+            Ini baris dua 
+            <!-- Ini komentar-->
+
     </body>
 </html>
