--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
 <title>Test</title>
+<link rel="stylesheet" href="index.css"
+<!---->
 </head>
     <body>
-        <h1 style="color: blue;">Halo Guys</h1>
-            Ini baris satu 
-            <br>
-            Ini baris dua 
+        <h1>Halo World</h1>
             <!-- Ini komentar-->
 
     </body>
