--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Test</title>
-<link rel="stylesheet" href="index.css"
-<!---->
+        <title>Test</title>
+        <link rel="stylesheet" href="index.css">
+        <style>
+            h1{
+                color: red
+            }
+            p{
+                color:green 
+            }
+            .mobil {
+                color: blue;
+            }
+
+            #Mobilio {
+                color: purple;
+            }
+        </style>
 </head>
     <body>
         <h1>Halo World</h1>
+        <p> Hai</p>
+        <p class="mobil" id="Mobilio"> Ini Mobilio</p>
+        <p class="mobil" id="Rubicon"> Ini Rubicon</p>
             <!-- Ini komentar-->
 
     </body>
