--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="index.css">
-        <style>
-            h1{
-                color: red
-            }
-            p{
-                color:green 
-            }
-            .mobil {
-                color: blue;
-            }
-
-            #Mobilio {
-                color: purple;
+        <style>/*
+            .container {
+                height: 300px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+            }*/
+            .container  div {
+                width: 100px;
+                padding: 10px;
+                text-align: center;
+                font-size: 14sp;
+                color: #ffeead;
+                border: 2px solid black;
+                background-color: green;
+                margin: 16px;
+                border-radius: 10px;
             }
         </style>
 </head>
     <body>
-        <h1>Halo World</h1>
-        <p> Hai</p>
-        <p class="mobil" id="Mobilio"> Ini Mobilio</p>
-        <p class="mobil" id="Rubicon"> Ini Rubicon</p>
+       <nav class="container">
+            <div class="home">Home</div>
+            <div class="search">Search</div>
+            <div class="logout">Logout</div>
+       </nav>
             <!-- Ini komentar-->
 
     </body>
