--- a/index.html
+++ b/index.html
@@ -3,31 +3,29 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="index.css">
-        <style>/*
-            .container {
-                height: 300px;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-            }*/
-            .container  div {
-                width: 100px;
-                padding: 10px;
-                text-align: center;
-                font-size: 14sp;
-                color: #ffeead;
-                border: 2px solid black;
-                background-color: green;
-                margin: 16px;
-                border-radius: 10px;
+        <style>
+            .wrapper {
+                display: grid;
+                grid-template-columns: 100px 100px 100px;
+                grid-gap: 10px;
+            }
+            .box {
+                background-color: #444;
+                color: #fff;
+                border-radius: 5px;
+                padding: 20px;
+                font-size: 150%;
             }
         </style>
 </head>
     <body>
-       <nav class="container">
-            <div class="home">Home</div>
-            <div class="search">Search</div>
-            <div class="logout">Logout</div>
+       <nav class="wrapper">
+            <div class="box">A</div>
+            <div class="box">B</div>
+            <div class="box">C</div>
+            <div class="box">D</div>
+            <div class="box">E</div>
+            <div class="box">F</div>
        </nav>
             <!-- Ini komentar-->
 
